ifc-macros/test/unused_attribute.stderr
warning: Unused attribute
 --> test/unused_attribute.rs:5:15
  |
5 |         #[IFC(Unsafe)]
  |               ^^^^^^
  |
  = help: Try removing it

error: Warning_Error
  --> test/unused_attribute.rs:11:5
   |
11 |     compile_error!("Warning_Error");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
